--- a/portraits.html
+++ b/portraits.html
@@ -41,6 +41,13 @@
       color: #31a774;
     }
 
+    .menu-toggle {
+      display: none;
+      font-size: 2rem;
+      color: #fff;
+      cursor: pointer;
+    }
+
     .nav-links {
       display: flex;
       align-items: center;
@@ -56,6 +63,34 @@
 
     .nav-links a:hover {
       color: #31a774;
+    }
+
+    /* ========== Mobile Nav ========== */
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+
+      .nav-links {
+        display: none;
+        flex-direction: column;
+        background-color: #0d1e16;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        width: 200px;
+        padding: 1rem;
+        border: 1px solid #31a77455;
+      }
+
+      .nav-links.show {
+        display: flex;
+      }
+
+      .nav-links a {
+        margin: 0.5rem 0;
+        font-size: 1rem;
+      }
     }
 
     .category-gallery {
@@ -132,23 +167,14 @@
       font-size: 0.9rem;
       box-shadow: 0 -2px 8px rgba(49, 167, 116, 0.1);
     }
-
-    @media (max-width: 768px) {
-      .nav-links a {
-        margin-left: 1rem;
-        font-size: 0.9rem;
-      }
-
-      .category-gallery h2 {
-        font-size: 2.2rem;
-      }
-    }
   </style>
 </head>
 <body>
-  <nav class="top-nav" id="navbar">
+
+  <nav class="top-nav">
     <div class="nav-logo">Photo Gallery</div>
-    <div class="nav-links">
+    <div class="menu-toggle" id="menu-toggle">☰</div>
+    <div class="nav-links" id="nav-links">
       <a href="index.html">← Home</a>
       <a href="nature.html">Nature</a>
       <a href="cities.html">Cities</a>
@@ -158,14 +184,15 @@
   </nav>
 
   <section class="category-gallery">
-    <h2>Portraits Gallery</h2>
-    <div class="grid-gallery">
-      <img src="images/portraits/portraits01.jpg" alt="Portrait 1" />
-      <img src="images/portraits/portraits02.jpg" alt="Portrait 2" />
-      <img src="images/portraits/portraits03.jpg" alt="Portrait 3" />
-      <img src="images/portraits/portraits04.jpg" alt="Portrait 4" />
-    </div>
-  </section>
+  <h2>Portraits Gallery</h2>
+  <div class="grid-gallery">
+    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&w=800&q=80" alt="Portrait 1" />
+    <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?auto=format&fit=crop&w=800&q=80" alt="Portrait 2" />
+    <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?auto=format&fit=crop&w=800&q=80" alt="Portrait 3" />
+    <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=crop&w=800&q=80" alt="Portrait 4" />
+  </div>
+</section>
+
 
   <div class="lightbox" id="lightbox">
     <span class="close">×</span>
@@ -177,6 +204,14 @@
   </footer>
 
   <script>
+    const toggleButton = document.getElementById('menu-toggle');
+    const navLinks = document.getElementById('nav-links');
+
+    toggleButton.addEventListener('click', () => {
+      navLinks.classList.toggle('show');
+    });
+
+    // Lightbox
     const galleryImages = document.querySelectorAll('.grid-gallery img');
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.querySelector('.lightbox-img');
