--- a/family.html
+++ b/family.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Family - Photo Gallery</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;800&display=swap" rel="stylesheet" />
   <style>
@@ -22,48 +22,47 @@
     }
 
     .top-nav {
-      position: fixed;
-      width: 100%;
-      top: 0;
-      left: 0;
-      padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      padding: 15px 20px;
+      background: transparent;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
       z-index: 1000;
-      background-color: #0d1e16;
-      box-shadow: 0 0 10px #31a77488;
     }
 
     .nav-logo {
-      font-weight: 800;
-      font-size: 1.5rem;
+      font-size: 24px;
+      font-weight: bold;
       color: #31a774;
+    }
+
+    .menu-toggle {
+      display: none;
+      font-size: 30px;
+      cursor: pointer;
+      color: white;
     }
 
     .nav-links {
       display: flex;
-      align-items: center;
+      gap: 20px;
     }
 
     .nav-links a {
-      margin-left: 1.5rem;
-      color: #ffffffcc;
+      color: white;
       text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s;
-    }
-
-    .nav-links a:hover {
-      color: #31a774;
+      padding: 5px 0;
     }
 
     .toggle-mode {
-      margin-left: 1rem;
       font-size: 1.3rem;
-      color: #31a774;
       background: none;
       border: none;
+      color: #31a774;
       cursor: pointer;
     }
 
@@ -143,41 +142,64 @@
     }
 
     @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+
+      .nav-links {
+        display: none;
+        flex-direction: column;
+        background: black;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        width: 200px;
+        border: 1px solid white;
+      }
+
+      .nav-links.show {
+        display: flex;
+      }
+
       .nav-links a {
-        margin-left: 1rem;
-        font-size: 0.9rem;
+        padding: 10px;
       }
 
       .category-gallery h2 {
-        font-size: 2.2rem;
+        font-size: 2rem;
       }
     }
   </style>
 </head>
 <body>
-
-  <nav class="top-nav" id="navbar">
+  <nav class="top-nav">
     <div class="nav-logo">Photo Gallery</div>
-    <div class="nav-links">
+    <div class="menu-toggle" id="menu-toggle">☰</div>
+    <div class="nav-links" id="nav-links">
       <a href="index.html">← Home</a>
       <a href="nature.html">Nature</a>
       <a href="cities.html">Cities</a>
       <a href="portraits.html">Portraits</a>
       <a href="cars.html">Cars</a>
-      <button class="toggle-mode" onclick="toggleMode()">🌙</button>
+      <button class="toggle-mode" onclick="toggleMode()"></button>
     </div>
   </nav>
 
-  <section class="category-gallery">
-    <h2>Family Memories</h2>
-    <div class="grid-gallery">
-      <img src="images/family/family01.jpg" alt="Family 1" />
-      <img src="images/family/family02.jpg" alt="Family 2" />
-      <img src="images/family/family03.jpg" alt="Family 3" />
-      <img src="images/family/family04.jpg" alt="Family 4" />
-      <img src="images/family/family05.jpg" alt="Family 5" />
-    </div>
-  </section>
+    <section class="category-gallery">
+  <h2>Family Memories</h2>
+  <div class="grid-gallery">
+    <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?auto=format&fit=crop&w=400&h=300&q=80" alt="Family 1" />
+    <img src="https://images.unsplash.com/photo-1584467735871-31dd67c8468b?auto=format&fit=crop&w=400&h=300&q=80" alt="Family 2" />
+    <img src="https://images.unsplash.com/photo-1600114585181-b5deedb7c4ec?auto=format&fit=crop&w=400&h=300&q=80" alt="Family 3" />
+    <img src="https://images.unsplash.com/photo-1581579185169-787dfd5d0d0b?auto=format&fit=crop&w=400&h=300&q=80" alt="Family 4" />
+    <img src="https://images.unsplash.com/photo-1506973035872-a4ec16b8e8d3?auto=format&fit=crop&w=400&h=300&q=80" alt="Family 5" />
+  </div>
+</section>
+
+
+
+
+
 
   <div class="lightbox" id="lightbox">
     <span class="close">×</span>
@@ -189,6 +211,12 @@
   </footer>
 
   <script>
+    const toggleButton = document.getElementById('menu-toggle');
+    const navLinks = document.getElementById('nav-links');
+    toggleButton.addEventListener('click', () => {
+      navLinks.classList.toggle('show');
+    });
+
     const galleryImages = document.querySelectorAll('.grid-gallery img');
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.querySelector('.lightbox-img');
@@ -214,14 +242,13 @@
     function toggleMode() {
       document.body.classList.toggle('dark-mode');
       const toggleButton = document.querySelector('.toggle-mode');
-      toggleButton.textContent = document.body.classList.contains('dark-mode') ? '☀️' : '🌙';
+      toggleButton.textContent = document.body.classList.contains('dark-mode') ? 
     }
 
     window.onload = () => {
       const toggleButton = document.querySelector('.toggle-mode');
-      toggleButton.textContent = document.body.classList.contains('dark-mode') ? '☀️' : '🌙';
+      toggleButton.textContent = document.body.classList.contains('dark-mode') ? 
     };
   </script>
-
 </body>
 </html>
